--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .box {
-  border: 3px solid red;
+  border: 2px solid red;
 }
 .boxNotActive {
-  border: 3px solid red;
+  border: 2px solid red;
 }
 .circle {
   border-radius: 50%;
@@ -73,4 +73,8 @@
   right: 0;
   bottom: 0;
   cursor: nw-resize;
+}
+
+#canvas {
+  border: 1px solid blue;
 }
