--- a/home.css
+++ b/home.css
@@ -3,15 +3,14 @@
 }
 
 .canvas-block {
-  width: 1000px;
-  height: 500px;
+  /* width: 1000px;
+  height: 500px; */
   position: relative;
 }
 
 canvas {
   position: absolute;
   inset: 0px;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
 }
-
