--- a/index.css
+++ b/index.css
@@ -7,24 +7,29 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* .box {
-  border: 1px solid rgb(49, 156, 0);
-} */
-/* .box:focus {
+.box:focus {
   border: 1px solid rgb(223, 70, 70);
-} */
+}
 
-/* .box:active {
-  border: 1px solid rgb(17, 0, 255);
-} */
+.boxNotActive:hover,
+.box:hover {
+  cursor: pointer;
+}
+
+.box:active {
+  /* border: 1px solid rgb(17, 0, 255); */
+}
 
 .boxNotActive,
 .box {
-  border: 3px solid red;
+  border: 3px solid rgb(0, 0, 0);
 }
 
 .circle {
   border-radius: 50%;
+}
+.point {
+  background-color: rgb(0, 0, 0);
 }
 
 .boxResize {
@@ -70,4 +75,29 @@
 
 .details {
   border: 1px solid pink;
+}
+
+#popover {
+  display: none;
+  margin-top: 10px;
+  z-index: 1;
+}
+
+#container {
+  position: absolute;
+}
+
+.fa-xmark {
+  position: absolute;
+  top: 0;
+  right: 0px;
+  margin: 10px;
+  cursor: pointer;
+}
+.fa-xmark:hover {
+  color: #0d6efd;
+}
+
+.all-list {
+  border: 1px solid red;
 }
