--- a/index.css
+++ b/index.css
@@ -78,7 +78,21 @@
 }
 
 #container {
+  width: 100%;
+  height: 93%;
   position: absolute;
+  /* border: 1px solid rgb(229, 229, 253); */
+  overflow: auto;
+}
+.card {
+  border: none !important;
+}
+#main-body {
+  /* transition: all 0.5s ease-in-out; */
+  transform-origin: 0% 0%;
+}
+img {
+  /* border: 1px solid #ececf1; */
 }
 
 .fa-xmark {
