--- a/index.css
+++ b/index.css
@@ -88,7 +88,6 @@
   transform-origin: 0% 0%;
 }
 
-
 .fa-xmark {
   position: absolute;
   top: 0;
@@ -106,5 +105,14 @@
 
 .annotation-link {
   text-decoration: none;
-  color: #212529;
 }
+
+#main-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* #main-body img {
+  width: auto;
+  max-height: 600px;
+} */
