--- a/index.css
+++ b/index.css
@@ -24,6 +24,8 @@
 }
 .point {
   background-color: rgb(0, 0, 0);
+  width: 10px;
+  height: 10px;
 }
 
 .boxResize {
@@ -78,10 +80,11 @@
 }
 
 #container {
-  width: 100%;
-  height: 93%;
+  width: 98%;
+  height: 85%;
   position: absolute;
   overflow: auto;
+  margin: 10px;
 }
 
 #main-body {
@@ -106,13 +109,3 @@
 .annotation-link {
   text-decoration: none;
 }
-
-#main-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-/* #main-body img {
-  width: auto;
-  max-height: 600px;
-} */
