--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   margin: 10px 0px;
 }
 .imagePortrait {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 .box:focus {
@@ -80,11 +80,12 @@
 }
 
 #container {
-  width: 98%;
+  width: 99%;
   height: 85%;
   position: absolute;
   overflow: auto;
-  margin: 10px;
+  margin: 0px 5px;
+  padding-bottom: 10px;
 }
 
 #main-body {
