--- a/index.css
+++ b/index.css
@@ -156,6 +156,10 @@
 
 #main-body {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0px 0px;
+  transform: scale(1) translate(0px, 0px);
 }
 
 .fa-xmark {
