--- a/index.css
+++ b/index.css
@@ -155,11 +155,15 @@
 }
 
 #main-body {
+  border: 1px solid red;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  transform-origin: 0px 0px;
-  transform: scale(1) translate(0px, 0px);
+  /* width: 100%;
+  height: 100%; */
+  /* transform-origin: 0px 0px;
+  transform: scale(1) translate(0px, 0px); */
+}
+img {
+  border: 1px solid green;
 }
 
 .fa-xmark {
