--- a/index.css
+++ b/index.css
@@ -140,28 +140,28 @@
   z-index: 1;
 }
 
-#container {
-  /* width: 99%;
-  height: 85%; */
-  /* position: absolute; */
-  /* overflow: auto; */
-  /* margin: 0px 5px; */
-  /* padding-bottom: 10px; */
-}
 .main-container {
-  /* display: flex;
+  height: calc(100vh - 110px);
+  width: 100vw;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid rgb(12, 85, 241);
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
+}
+.cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #main-body {
   border: 1px solid red;
   position: absolute;
-  /* width: 100%;
-  height: 100%; */
-  /* transform-origin: 0px 0px;
-  transform: scale(1) translate(0px, 0px); */
 }
+
 img {
   border: 1px solid green;
 }
@@ -185,10 +185,8 @@ img {
   text-decoration: none;
 }
 
-img {
-  /* position: absolute;
-  left: 0;
-  top: 0; */
-  /* transition: all 0.25s ease-in-out; */
-  /* transform-origin: "center center"; */
+.abcd {
+  position: absolute;
+  right: 0;
+  top: 0px;
 }
